--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "resolveJsonModule": true,
     "moduleResolution": "bundler",
-    // "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
@@ -27,7 +27,10 @@
         "./*"
       ]
     },
-    "resolveJsonModule": true
+    "types": [
+      "node",
+      "webpack-env"
+    ],
   },
   "include": [
     "next-env.d.ts",
