--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
