--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
     "react": "^18",
@@ -20,6 +23,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
