--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agape",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
